tests/integration/snapshots/integration__snapshot_tui_test__file_explorer_filtered.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
┌ Sessions ────────────────────────────────────────────────┐┌ Preview ─────────────────────────────┐
│> [ ]  2y1m: 20240115-session1.cast  (claude, 50.0 KB)    ││Name: 20240115-session1.cast          │
│  [ ]  2y1m: 20240114-session3.cast  (claude, 100.0 KB)   ││Agent: claude                         │
│                                                          ││Size: 50.0 KB                         │
│                                                          ││Modified: 2024-01-15 10:30            │
│                                                          ││Path: /sessions/claude/20240115-sessio│
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
