tests/integration/snapshots/integration__snapshot_tui_test__file_explorer_narrow.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
┌ Sessions ──────────────────────────────────────┐
│> [ ]     2y1m: 20240117-session4.cast  (gemini,│
│  [ ]     2y1m: 20240116-session2.cast  (codex, │
│  [ ]     2y1m: 20240115-session1.cast  (claude,│
│  [ ]     2y1m: 20240114-session3.cast  (claude,│
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
