tests/integration/snapshots/integration__snapshot_tui_test__file_explorer_preview_without_backup.snap
---
source: tests/integration/snapshot_tui_test.rs
expression: output
---
┌ Sessions ────────────────────────────────────────────────┐┌ Preview ─────────────────────────────┐
│> [ ]  2y1m: 20240117-session4.cast  (gemini, 1.0 MB)     ││Name: 20240117-session4.cast          │
│  [ ]  2y1m: 20240116-session2.cast  (codex, 2.0 MB)      ││Agent: gemini                         │
│  [ ]  2y1m: 20240115-session1.cast  (claude, 50.0 KB)    ││Size: 1.0 MB                          │
│  [ ]  2y1m: 20240114-session3.cast  (claude, 100.0 KB)   ││Duration: 5m 0s                       │
│                                                          ││Markers: 2                            │
│                                                          ││Modified: 2024-01-17 16:00            │
│                                                          ││                                      │
│                                                          ││Preview                               │
│                                                          ││ $ echo hello                         │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
│                                                          ││                                      │
└──────────────────────────────────────────────────────────┘└──────────────────────────────────────┘
